After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 649227 - [python] Check for Py_None when setting a miniobject
[python] Check for Py_None when setting a miniobject
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-python
git master
Other All
: Normal blocker
: 0.10.22
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-05-02 20:05 UTC by Thiago Sousa Santos
Modified: 2011-05-03 11:18 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gstmodule: Check for Py_None when setting a miniobject (856 bytes, patch)
2011-05-02 20:05 UTC, Thiago Sousa Santos
committed Details | Review

Description Thiago Sousa Santos 2011-05-02 20:05:26 UTC
Avoids a segfault when passing None to a GstMiniObject property, for example
Comment 1 Thiago Sousa Santos 2011-05-02 20:05:29 UTC
Created attachment 187082 [details] [review]
gstmodule: Check for Py_None when setting a miniobject

Check if we got a None value before trying to use it as a
PyGstMiniObject.
Comment 2 Thiago Sousa Santos 2011-05-03 11:17:59 UTC
commit 501515522f2f330aefa42882952ad016e16d897d
Author: Thiago Santos <thiago.sousa.santos@collabora.co.uk>
Date:   Mon May 2 16:59:30 2011 -0300

    gstmodule: Check for Py_None when setting a miniobject
    
    Check if we got a None value before trying to use it as a
    PyGstMiniObject.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=649227