gstmodule: Check for Py_None when setting a miniobject

Check if we got a None value before trying to use it as a
PyGstMiniObject.

https://bugzilla.gnome.org/show_bug.cgi?id=649227